# copybarista

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  package-validation.yml  publish-pypi.yml  sync-to-source.yml
assets/: copybarista-sync-social.mmd  copybarista-sync.mmd
copybarista/: __init__.py  __main__.py  cli.py  cli_test.py  commands.py  commands_test.py  config.py  config_test.py  copy_bara_sky.py  copy_bara_sky_test.py  destinations.py  destinations_test.py  errors.py  export.py  export_test.py  git.py  git_unit_test.py  globs.py  globs_test.py  import_request.py  import_request_test.py  leak_check.py  leak_check_test.py  manifest.py  manifest_test.py  sync_setup.py  sync_setup_test.py  template.py  template_test.py  transforms.py  transforms_test.py  workflow.py  workflow_test.py
copybarista/templates/: __init__.py  copy.barista.toml.tmpl  copybarista.sync.toml.tmpl  package-validation.yml.tmpl  public-to-source.yml.tmpl  source-to-public.yml.tmpl
docs/: architecture.md  config-reference.md  github-setup.md  tutorial.md
examples/: README.md  examples_test.py
examples/python-package/github/: protect-main-ruleset.json  public-to-source.yml  source-to-public.yml
examples/python-package/source-repo/: copy.barista.toml
scripts/: bench.py  bench_test.py  check_release_tree.py  check_release_tree_test.py  clean.py  render_diagram.py  sync_export_pr.py  sync_export_pr_test.py  sync_import_change.py  sync_import_change_test.py
tests/: git_test.py
